--- a/_config.json
+++ b/_config.json
@@ -33,52 +33,42 @@
       "name": "蜜柑计划",
       "href": "https://mikanani.me/",
       "imgSrc": "/img/fish.png"
-    },
-    {
-      "name": "编程猫格式工厂",
-      "href": "https://gitee.com/sf-yuzifu/bcm_convertor",
-      "imgSrc": "/img/convertor.png"
-    },
-    {
-      "name": "Waddle编辑器",
-      "href": "https://waddle.coco-central.cn/",
-      "imgSrc": "/img/waddle2.png"
-    },
-    {
-      "name": "PICKDUCK",
-      "href": "https://shequ.pgaot.com/",
-      "imgSrc": "/img/pickduck.png"
-    },
-    {
-      "name": "Boxy编辑器",
-      "href": "https://boxy.coco-central.cn/",
-      "imgSrc": "/img/boxy.png"
     }
+    {
+      "name": "动漫花园",
+      "href": "https://dmhy.org/",
+      "imgSrc": "/img/fish.png"
+    }
+    {
+      "name": "OmoFun",
+      "href": "https://omoget.com/",
+      "imgSrc": "/img/fish.png"
+    } 
   ],
   "contact": [
     {
       "name": "QQ",
-      "href": "https://wpa.qq.com/msgrd?v=3&uin=1906929246&site=qq&menu=yes&jumpflag=1",
+      "href": "https://qm.qq.com/q/exlbofIbrW",
       "iconfont": "icon-qq"
     },
     {
       "name": "Gitee",
-      "href": "https://gitee.com/sf-yuzifu",
+      "href": "https://gitee.com/bfeizhi",
       "iconfont": "icon-gitee"
     },
     {
       "name": "Github",
-      "href": "https://github.com/sf-yuzifu",
+      "href": "https://gitee.com/sf-yuzifu",
       "iconfont": "icon-github"
     },
     {
       "name": "BiliBili",
-      "href": "https://space.bilibili.com/447666445",
+      "href": "https://space.bilibili.com/509966893",
       "iconfont": "icon-bilibili"
     }
   ],
   "task": {
-    "name": "个人博客",
-    "href": "https://blog.yzf.moe/"
+    "name": "神奇门",
+    "href": "https://bfeizhi1.eu.org//"
   }
 }
