--- a/_config.json
+++ b/_config.json
@@ -58,7 +58,7 @@
     },
     {
       "name": "Github",
-      "href": "https://gitee.com/sf-yuzifu",
+      "href": "https://gitee.com/bfeizhi",
       "iconfont": "icon-github"
     },
     {
